--- a/Website/index.html
+++ b/Website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-vindo</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,7 +31,7 @@
                 </div>
 
         <div class="mobile-menu-icon">
-            <button onclick="menuShow()"><img class="icon" src="imagens/icons/icons8-cardápio.gif" alt="Menu Icon"></button>
+            <button onclick="menuShow()"><img class="icon" src="imagens/icons/supostamente 24.png" alt="Menu Icon"></button>
         </div>
     
         
@@ -69,7 +69,7 @@
             muted
             loop
             plays-inline>
-            <source src="videos/passeiocasa.mp4">
+            <source src="videos/7578552-sd_960_540_30fps.mp4">
         </video>
     </div>
 
